Fri Oct 31 13:55:28 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/*: remove DL as it is replaced by Fiddle.
	  [Feature #5458] Thanks to Jonan Scheffler <jonanscheffler@gmail.com>
	  for this patch

	* test/dl/*: ditto.

Fri Oct 31 15:26:02 2014  Charles Oliver Nutter  <headius@headius.com>

	* test/openssl/test_ssl.rb: Add certificate verification chain
	  test from JRuby community.

Fri Oct 31 18:58:02 2014  Charles Oliver Nutter  <headius@headius.com>

	* test/psych/test_emitter.rb: Fix line_width test...initial value
	  is impl-specific and attr assignment always returns LHS.

Fri Oct 31 22:19:30 2014  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest.rb (Digest()): This function should now be
	  thread-safe.  If you have a problem with regard to on-demand
	  loading under a multi-threaded environment, preload "digest/*"
	  modules on boot or use this method instead of directly
	  referencing Digest::*. [Bug #9494]
	  cf. https://github.com/aws/aws-sdk-ruby/issues/525

Fri Oct 31 21:33:17 2014  Akinori MUSHA  <knu@iDaemons.org>

	* test/digest/test_digest.rb: Drop #!.  This no longer runs
	  stand-alone because it depends on ruby/envutil.

Fri Oct 31 17:22:19 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak: $(APPEND) with some arguments insert a space before
	  the arguments, so it causes error if the arguments are expected to be
	  a macro definition.  this fix resolve the build error introduced at
	  r48210.

Fri Oct 31 16:47:35 2014  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/lib/syslog/logger.rb (Syslog::Logger::VERSION): Bump
	  the VERSION to 2.1.0. [ruby-core:64483] [Bug #10159]

Fri Oct 31 16:33:46 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/imap.rb (Net::IMAP#fetch): [DOC] Document that
	  Net::IMAP#fetch will return nil instead of an emtpy array.

Fri Oct 31 12:54:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (.unicode-tables.time): needs Unicode files always,