@@ -1,3 +1,7 @@
+Sat Nov  1 06:31:41 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole_variant.c: use typed data.
+
 Fri Oct 31 13:55:28 2014  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/dl/*: remove DL as it is replaced by Fiddle.
